After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701115 - Fails to build on Windows because of unconditionally including unistd.h
Fails to build on Windows because of unconditionally including unistd.h
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal major
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-28 06:43 UTC by Sebastian Dröge (slomo)
Modified: 2013-09-24 16:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2013-05-28 06:43:33 UTC
See http://lists.freedesktop.org/archives/gstreamer-devel/2013-May/041070.html

unistd.h is not available on Windows.
Comment 1 Sebastian Dröge (slomo) 2013-05-28 06:52:19 UTC
commit e7c748a7f2a8093e674498e33fee20ef4485409b
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Tue May 28 08:51:08 2013 +0200

    ges-pitivi-formatter: Remove some unneeded includes and clean up includes
    
    Fixes the build on Windows, where there's no unistd.h... which wasn't
    needed at all.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=701115