ges-pitivi-formatter: Remove some unneeded includes and clean up includes

Fixes the build on Windows, where there's no unistd.h... which wasn't
needed at all.

https://bugzilla.gnome.org/show_bug.cgi?id=701115